# DataScienceML-Learning

./: .gitignore  TextAnalysisResearch.ipynb  expo-workflows.yaml  main.py  simple-linear-regressor.py
.ipynb_checkpoints/: main-checkpoint.ipynb
AANLP(Tez)/: readme
AANLP(Tez)/src/: Dockerfile  Dockerfile2  config.py  dataset.py  main.py  model-architecture.txt  model.py
Adult-Income-Kaggle/: engine.py  main.py
AutoCursorLikeCli_Gemini/: main.py
Bengaluru-House-Price-Prediction/input/: train-folds.csv
Bengaluru-House-Price-Prediction/notebooks/: explore.ipynb
Bengaluru-House-Price-Prediction/src/: create_folds.py  main.py
Chatbots-Kaggle/: dataset.py  engine.py  intent.py  intents.json  main.py  model.py  requirements.txt  tokenizer.py
CreditCardFraud/: config.py  main.py
FeatureEngineeringBasicPractice/: airbnb-clearning.ipynb  main.ipynb
GenerativeAI_Simple_Rag/: main.py  requirements.txt
JobPositionOrgization/src/: create_folds.py  main.py
NLP_Tasks/: cleanser.py  cnn_model.py  demo.py  engine.py  tokenizer.py  wordembedding.py
Neural Networks T/: Automatic Text Sugguestion Tensorflow BiLSTM.ipynb  Multilabel_Classification_Neural_Network.ipynb  Text_Summarization_HashTable_+_Heap.ipynb  house-price-prediction.py  neural network scratch.ipynb  simple_example_lr.py
Neural Networks T/Multi Class Review/: Multiclass Classification.ipynb
PyTorch-TypeAhead-Suggestion/: README.md  pyproject.toml  run.sh
PyTorch-TypeAhead-Suggestion/torchf/: inference.py  main.py
RandomLMs/: A.java  B.java  Template.java  pyproject.toml  requirements.txt
RandomLMs/functions/: main.py
RecommenderSystem/: generate_dataset.py  inference.py  main,py
SentenceSimilarity_transformers_easy/: sentence_similarity.py
SentimentAnalyzer-Kaggle/: pyproject.toml  run.sh
SentimentAnalyzer-Kaggle/sentiment_kaggle/: main.py
TimeSeriesDatasetAnalysis/ARIMA_Usuage Sample Data/: arima_ExponentialSmoothing_Algorithms.ipynb  arima_usuage.ipynb
TimeSeriesDatasetHandlings/: 0_analysis.ipynb  predict-no-of-births-on-aday.ipynb
WebURLsPhishingKaggle/: main.py  runner.sh
_breast-cancer/: analysis.ipynb
_practice/: 01.ipynb  02..ipynb  AdaboostDecisionTree.ipynb  Readme.md  TextAnalysisResearch.ipynb  analysis.ipynb  requirements.txt
airport-delays-analysis/: analysis.ipynb
almostanytextclassifier/: pyproject.toml  run.sh
almostanytextclassifier/almostanytextclassifier/: main.py  model.py
almostanytextclassifier/almostanytextclassifier/utils/: imdb_dataset.py  logger.py
car-dekho-analysis/: analysis.ipynb
conceptchat/: api.js  index.html  main.js  package-lock.json  package.json  style.css
dcgan-from-scratch/: inference.py  main.py  requirements.txt  run.sh
it-tickets-kaggle-lighning-mlflow-test/: Makefile  labels.json  main.py  requirements.txt
kubefloww-trainer/: Dockerfile  main.py  requirements.txt
lightning-kubeflow/: main.py  pipeline.py
mnist-autoencoder-kaggle/: main.py
openml_fashionmnist/: main.py  mlflowserve.sh  pyproject.toml  run.sh  vertextrain.sh
pyproject-generator/: README.md  pyproject.toml
pyproject-generator/pyproject-generator/: generator.py  project_generator.py
pytorch-lightning-torchserve/: pyproject.toml  requirements.txt  run.sh
pytorch-lightning-torchserve/lightning_logs/: hparams.yaml  metrics.csv
pytorch-lightning-torchserve/src/: inference.py  main.py  utils.py
pytorch-lightning-torchserve/torchh/: __init__.py  dataset.py  model.py
pytorch-lightning-torchserve/torchserve/: handler.py  run.sh
recurrent-variational-autoencoder/: README.md  inference.py  main.py  pyproject.toml  run.sh  rvae_endpoint.py  torchserve-script.sh
recurrent-variational-autoencoder/recurrent-variational-autoencoder/: __init__.py  dataset.py  model.py
sklearn-kubeflow-trainer/: Makefile  requirements.txt
torch-train-engine/: Dockerfile  config.py  dataset.py  engine.py  logger.py  main.py  model.py  requirements.txt
transformer-nano-gpt/: README.md  run.sh
transformer-nano-gpt/src/: main.py  (+1 more)
twitter-emotion-classifier/: .dockerignore  Dockerfile  Makefile  requirements.txt  setup.py  supervisord.conf
twotower-recommender-ranker/: .dockerignore  Dockerfile  docker.json  inference.py  main.py  pyproject.toml  run.sh
twotower-recommender-ranker/twotower_recommender_ranker/: __init__.py  logger.py  twotower_recommender.py
twotower-recommender-ranker/twotower_recommender_ranker/datasets/movielense/: movielence_dataset.py
twotower-recommender-ranker/twotower_recommender_ranker/models/: base.py  content_preference_model.py  preranking_model.py  scorer.py  user_preference_model.py
(+36 files in other folders)
