[tool.poetry]
name = "torchf"
version = "0.1.0"
description = ""
authors = ["Sounish Nath <flock.sinasini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
torch = "^2.0.1"
transformers = "^4.31.0"
lightning = "^2.0.6"
kfp = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
