[tool.poetry]
name = "sentiment-kaggle"
version = "0.1.0"
description = ""
authors = ["Sounish Nath <flock.sinasini@gmail.com>"]
readme = "README.md"
packages = [{include = "sentiment_kaggle"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
lightning = "^2.0.4"
torchmetrics = "^0.11.4"
transformers = "^4.30.2"
huggingface-hub = "^0.15.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
