[tool.poetry]
name = "almostanytextclassifier"
version = "0.1.0"
description = ""
authors = ["sounish nath <flock.sinasini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lightning = "^2.1.2"
torchmetrics = "^1.2.0"
transformers = "^4.35.2"
datasets = "^2.15.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
