[tool.poetry]
name = "torchf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytorch-lightning = "^2.0.4"
scikit-learn = "^1.2.2"
torchmetrics = "^0.11.4"
mlflow = "^2.4.1"
lightning = "^2.0.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
