[tool.poetry]
name = "recurrent-variation-autoencoder"
version = "0.1.0"
description = ""
authors = ["Sounish Nath <flock.sinasini@gmail.com>"]
readme = "README.md"
packages = [{include = "recurrent_variation_autoencoder"}]

[tool.poetry.dependencies]
python = "^3.9"
lightning = "^2.0.8"
torchmetrics = "^1.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
