[tool.poetry]
name = "twotower-recommender-ranker"
version = "0.1.0"
description = ""
authors = ["Sounish Nath <flock.sinasini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
lightning = "^2.1.0"
pandas = "^2.1.2"
transformers = "^4.34.1"
torchmetrics = "^1.2.0"
tensorboard = "^2.15.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
